Remove testing changes.